--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
 
     // ZXing QR dependency
-    implementation 'com.google.zxing:core:3.4.0'
+    implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
+
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
