--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,19 +42,22 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     // Firebase dependency
-    implementation 'com.google.firebase:firebase-database:20.0.4'
+    implementation ('com.google.firebase:firebase-database:20.1.0') {
+        exclude group: 'com.android.support', module: 'support-compat'
+    }
 
     // Google Play Services Maps
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
 
     // ZXing QR dependency
-    implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
-
+    implementation ('com.journeyapps:zxing-android-embedded:3.6.0'){
+        exclude group: 'com.android.support', module: 'support-compat'
+    }
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     // MultiDex
-    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'androidx.multidex:multidex:2.0.1'
 }
