--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,7 +50,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".logInAttendance"
+            android:name=".LogInAttendance"
             android:exported="false"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" >
             <meta-data
