--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,10 +49,15 @@ dependencies {
     // Google Play Services Maps
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
 
-    // ZXing QR dependency
+    // ZXing QR Generation dependency
     implementation ('com.journeyapps:zxing-android-embedded:3.6.0'){
         exclude group: 'com.android.support', module: 'support-compat'
     }
+    implementation 'com.google.zxing:core:3.4.1'
+
+    // Google Mobile Vision API QR Scan dependency
+    implementation 'com.google.android.gms:play-services-vision:20.1.3'
+    implementation 'com.google.android.gms:play-services-vision-common:19.1.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
