--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
         android:theme="@style/Theme.CampusConnect"
         tools:targetApi="31">
         <activity
+            android:name=".SchoolLogIn"
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity
             android:name=".SystemAdmin"
             android:exported="false"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
