--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,7 @@ dependencies {
 
     // MultiDex
     implementation 'androidx.multidex:multidex:2.0.1'
+
+    // Biometric Dependency
+    implementation 'androidx.biometric:biometric:1.0.1'
 }
