--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,9 @@ dependencies {
     // Google Play Services Maps
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
 
+    // Google Play Services dependency
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
+
     // ZXing QR Generation dependency
     implementation ('com.journeyapps:zxing-android-embedded:3.6.0'){
         exclude group: 'com.android.support', module: 'support-compat'
