--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.campusconnect'
+    namespace 'com.ams.campusconnect'
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.campusconnect"
+        applicationId "com.ams.campusconnect"
         minSdk 19
         targetSdk 32
         versionCode 11
