--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,4 +69,7 @@ dependencies {
 
     // Date and TIme from Server Volley Dependency
     implementation 'com.android.volley:volley:1.2.1'
+
+    // Androidx Biometric
+    implementation "androidx.biometric:biometric:1.1.0"
 }
